--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "dependencies": {
     "chrome-launcher": "^1.1.2",
     "chrome-remote-interface": "^0.33.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
     "pm2": "^5.4.3",
     "puppeteer": "^24.1.0",
