--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
+    "papaparse": "^5.5.2",
     "pm2": "^5.4.3",
     "puppeteer": "^24.1.0",
     "ws": "^8.18.0"
