--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "chalk": "^5.4.1",
     "chrome-launcher": "^1.1.2",
     "chrome-remote-interface": "^0.33.2",
     "cors": "^2.8.5",
