--- a/package.json
+++ b/package.json
@@ -17,20 +17,27 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "browser-headers": "^0.4.1",
     "chrome-launcher": "^1.1.2",
     "chrome-remote-interface": "^0.33.2",
     "cors": "^2.8.5",
+    "delay-async": "^1.2.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "fingerprint-generator": "^2.1.64",
+    "got": "^11.8.6",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
     "p-limit": "^6.2.0",
+    "p-retry": "^6.2.1",
+    "p-throttle": "^7.0.0",
     "papaparse": "^5.5.2",
     "pm2": "^5.4.3",
     "puppeteer": "^24.1.0",
+    "random-useragent": "^0.5.0",
     "ws": "^8.18.0"
   }
 }
