--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
-    "dev": "node --watch app.js"
+    "dev": "node --watch app.js",
+    "process-csv": "node processInventory.js process"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,13 @@
   "dependencies": {
     "axios": "^1.7.9",
     "browser-headers": "^0.4.1",
+    "chalk": "^5.4.1",
     "chrome-launcher": "^1.1.2",
     "chrome-remote-interface": "^0.33.2",
+    "commander": "^12.1.0",
     "cors": "^2.8.5",
+    "csv-parse": "^5.6.0",
+    "csv-stringify": "^6.5.2",
     "delay-async": "^1.2.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
@@ -31,6 +36,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "p-limit": "^6.2.0",
     "p-retry": "^6.2.1",
     "p-throttle": "^7.0.0",
