--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 
+DATABASE_URL=mongodb+srv://abdulsamadlaghari1:baAx0cXLpZCVmFhN@learning-with-mongoose.hrwr1gx.mongodb.net/scraper?retryWrites=true&w=majority&appName=Learning-with-mongoose
