--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node app.js",
     "dev": "node --watch app.js",
-    "process-csv": "node processInventory.js process"
+    "process-csv": "node processInventory.js process",
+    "sync": "node syncInventory.js",
+    "test-sync": "node testSyncService.js"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +33,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "fingerprint-generator": "^2.1.64",
+    "form-data": "^4.0.2",
     "got": "^11.8.6",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -44,6 +47,7 @@
     "pm2": "^5.4.3",
     "puppeteer": "^24.1.0",
     "random-useragent": "^0.5.0",
+    "uuid": "^11.1.0",
     "ws": "^8.18.0"
   }
 }
