--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
+    "csv-parser": "^3.2.0",
     "csv-stringify": "^6.5.2",
     "delay-async": "^1.2.0",
     "dotenv": "^16.4.7",
