--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "fast-csv": "^5.0.2",
     "fingerprint-generator": "^2.1.64",
     "form-data": "^4.0.2",
     "got": "^11.8.6",
