--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start-scraper": "node app.js --start-scraper",
     "dev": "node --watch app.js",
     "process-csv": "node processInventory.js process",
-    "test-sync": "node testSyncService.js"
+    "test-sync": "node testSyncService.js",
+    "high-performance": "node --expose-gc start-high-performance.js",
+    "hp-test": "node --expose-gc start-high-performance.js --dry-run",
+    "hp-custom": "node --expose-gc start-high-performance.js --custom-config"
   },
   "keywords": [],
   "author": "",
@@ -21,7 +24,9 @@
     "@playwright/test": "^1.49.1",
     "axios": "^1.7.9",
     "browser-headers": "^0.4.1",
+    "bull": "^4.12.2",
     "chalk": "^5.4.1",
+    "cheerio": "^1.0.0-rc.12",
     "chrome-launcher": "^1.1.2",
     "chrome-remote-interface": "^0.33.2",
     "commander": "^12.1.0",
@@ -35,7 +40,9 @@
     "fast-csv": "^5.0.2",
     "fingerprint-generator": "^2.1.64",
     "form-data": "^4.0.2",
+    "generic-pool": "^3.9.0",
     "got": "^11.8.6",
+    "ioredis": "^5.3.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "mongoose": "^8.10.0",
