--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "p-retry": "^6.2.1",
     "p-throttle": "^7.0.0",
     "papaparse": "^5.5.2",
+    "playwright-stealth": "^0.0.1",
     "pm2": "^5.4.3",
     "puppeteer": "^24.1.0",
     "random-useragent": "^0.5.0",
