--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pm2": "^5.4.3",
     "puppeteer": "^24.1.0",
     "random-useragent": "^0.5.0",
+    "redis": "^4.7.1",
     "uuid": "^11.1.0",
     "ws": "^8.18.0"
   }
