--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "p-retry": "^6.2.1",
     "p-throttle": "^7.0.0",
     "papaparse": "^5.5.2",
+    "playwright-extra": "^4.3.6",
     "pm2": "^5.4.3",
     "puppeteer": "^24.1.0",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "random-useragent": "^0.5.0",
     "uuid": "^11.1.0",
     "ws": "^8.18.0"
